   * added support for [allied_with]<SSF> to SSF
   * New [find_path] tag, a WML interface to the pathfinder
   * Add inline SSF support to [store_starting_location]
   * Add support for [capture_village][filter_side]<SSF>
   * Added FACING, which adds facing= to a previous [unit] codeblock
   * Added VARIATION, which adds variation= to a previous [unit] codeblock
 * Miscellaneous and bug fixes:
   * Fixed compilation on all Debian architectures (Debian bug #636193)
   * Fixed handling of #ifver and #ifnver preprocessor directives in wmllint
   * Made it possible to switch themes from Preferences in the main menu
     (bug #10969)
   * Fixed bug #18715 where deleting of .cache directory and then regenerating
     the cache F5 in a running instance of wesnoth caused a crash
   * Fixed bug #18777: #ifver/#ifnver directives with the --preprocess command
     don't throw anymore "undefined macro" errors

Version 1.9.9:
 * AI:
   * Fixed bug #16117: added a way to supress E_NOT_REACHED_DESTINATION to lua
   * Fixed bug #16247: modify SoF 8 to let the dragon attack aggressively
     api via an optional boolean parameter - ai.move_full(from,to_x,to_y,true)
   * Fixed bug #18057: AI leaders should now attack when they should
   * Fixed bug #18122: AI leaders set to defensive will now follow goals anyway
   * Fixed bug #18356: AI leaders now won't move to avoided keeps
   * Applied patch #2846 by thonsew: let AI forget about invisible enemy units
     in villages during get_villages phase (bug #18101)
 * Campaigns:
   * Fixed remaining deprecation warnings about empty side=
   * Under the Burning Suns:
     * Fixed Naga Sentinel gaining an AMLA after 32 XP instead of the usual 150
     * Gave to Desert Shydes and Desert Stars 30% defense on void terrain
 * Engine:
   * Fixed bug #16173: Using n or cl while a fake unit is moving causes the game
     to segfault by creating game_display::fake_unit as an exception safe
     interace to the fake_units